// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component snapshot test AddCurrentTask 1`] = `
<div
  className="row AddCurrentTask"
>
  <label
    className="Param"
  >
    Tag
    :
    <input
      className="form-control"
      onChange={[Function]}
      type="text"
      value=""
    />
  </label>
  <label
    className="Param"
  >
    Description
    :
    <input
      className="form-control"
      onChange={[Function]}
      type="text"
      value=""
    />
  </label>
  <label
    className="Param"
  >
    Number of pomidors
    :
    <input
      className="form-control"
      onChange={[Function]}
      type="number"
      value={1}
    />
  </label>
  <button
    className="btn btn-success"
    onClick={[Function]}
    type="button"
  >
    Add
  </button>
</div>
`;

exports[`Component snapshot test CurrentTask 1`] = `
<tr>
  <td>
    TAG
  </td>
  <td>
    DESC
  </td>
  <td>
    123
  </td>
  <td>
    <button
      className="btn btn-outline-dark"
      onClick={[Function]}
    >
      ⮝
    </button>
    <button
      className="btn btn-outline-dark"
      onClick={[Function]}
    >
      ⮟
    </button>
  </td>
  <td>
    <button
      className="btn btn-outline-warning"
      data-backdrop="static"
      data-target="#updateCurrentTaskModal-2"
      data-toggle="modal"
    >
      Update
    </button>
    <div
      className="modal fade"
      id="updateCurrentTaskModal-2"
      tabIndex={-1}
    >
      <div
        className="modal-dialog"
      >
        <div
          className="modal-content"
        >
          <div
            className="modal-header"
          >
            <h5
              className="modal-title"
            >
              Update task
            </h5>
            <button
              aria-label="Close"
              className="close"
              data-dismiss="modal"
              onClick={[Function]}
              type="button"
            >
              <span
                aria-hidden="true"
              >
                ×
              </span>
            </button>
          </div>
          <div
            className="modal-body"
          >
            <div>
              <label>
                Id: 
                2
              </label>
              <label
                className="Param"
              >
                Tag
                :
                <input
                  className="form-control"
                  onChange={[Function]}
                  type="text"
                  value="TAG"
                />
              </label>
              <label
                className="Param"
              >
                Description
                :
                <input
                  className="form-control"
                  onChange={[Function]}
                  type="text"
                  value="DESC"
                />
              </label>
              <label
                className="Param"
              >
                Number of pomidors
                :
                <input
                  className="form-control"
                  onChange={[Function]}
                  type="number"
                  value={123}
                />
              </label>
            </div>
          </div>
          <div
            className="modal-footer"
          >
            <button
              className="btn btn-primary"
              data-dismiss="modal"
              onClick={[Function]}
              type="button"
            >
              Save changes
            </button>
            <button
              className="btn btn-secondary"
              data-dismiss="modal"
              onClick={[Function]}
              type="button"
            >
              Close
            </button>
          </div>
        </div>
      </div>
    </div>
  </td>
  <td>
    <button
      className="btn btn-outline-danger"
      onClick={[Function]}
    >
      Remove
    </button>
  </td>
</tr>
`;

exports[`Component snapshot test CurrentTasksTable 1`] = `
<div
  className="CurrentTasks"
>
  <h1>
    Current Tasks
  </h1>
  <div
    className="row AddCurrentTask"
  >
    <label
      className="Param"
    >
      Tag
      :
      <input
        className="form-control"
        onChange={[Function]}
        type="text"
        value=""
      />
    </label>
    <label
      className="Param"
    >
      Description
      :
      <input
        className="form-control"
        onChange={[Function]}
        type="text"
        value=""
      />
    </label>
    <label
      className="Param"
    >
      Number of pomidors
      :
      <input
        className="form-control"
        onChange={[Function]}
        type="number"
        value={1}
      />
    </label>
    <button
      className="btn btn-success"
      onClick={[Function]}
      type="button"
    >
      Add
    </button>
  </div>
  <table
    className="table table-bordered table-responsive-md table-striped"
  >
    <tbody>
      <tr>
        <th>
          Tag
        </th>
        <th>
          Description
        </th>
        <th>
          Pomidors
        </th>
        <th>
          Sort
        </th>
        <th>
          Update
        </th>
        <th>
          Remove
        </th>
      </tr>
      <tr>
        <td>
          d
        </td>
        <td>
          ds
        </td>
        <td>
          123312
        </td>
        <td>
          <button
            className="btn btn-outline-dark"
            onClick={[Function]}
          >
            ⮝
          </button>
          <button
            className="btn btn-outline-dark"
            onClick={[Function]}
          >
            ⮟
          </button>
        </td>
        <td>
          <button
            className="btn btn-outline-warning"
            data-backdrop="static"
            data-target="#updateCurrentTaskModal-5"
            data-toggle="modal"
          >
            Update
          </button>
          <div
            className="modal fade"
            id="updateCurrentTaskModal-5"
            tabIndex={-1}
          >
            <div
              className="modal-dialog"
            >
              <div
                className="modal-content"
              >
                <div
                  className="modal-header"
                >
                  <h5
                    className="modal-title"
                  >
                    Update task
                  </h5>
                  <button
                    aria-label="Close"
                    className="close"
                    data-dismiss="modal"
                    onClick={[Function]}
                    type="button"
                  >
                    <span
                      aria-hidden="true"
                    >
                      ×
                    </span>
                  </button>
                </div>
                <div
                  className="modal-body"
                >
                  <div>
                    <label>
                      Id: 
                      5
                    </label>
                    <label
                      className="Param"
                    >
                      Tag
                      :
                      <input
                        className="form-control"
                        onChange={[Function]}
                        type="text"
                        value="d"
                      />
                    </label>
                    <label
                      className="Param"
                    >
                      Description
                      :
                      <input
                        className="form-control"
                        onChange={[Function]}
                        type="text"
                        value="ds"
                      />
                    </label>
                    <label
                      className="Param"
                    >
                      Number of pomidors
                      :
                      <input
                        className="form-control"
                        onChange={[Function]}
                        type="number"
                        value={123312}
                      />
                    </label>
                  </div>
                </div>
                <div
                  className="modal-footer"
                >
                  <button
                    className="btn btn-primary"
                    data-dismiss="modal"
                    onClick={[Function]}
                    type="button"
                  >
                    Save changes
                  </button>
                  <button
                    className="btn btn-secondary"
                    data-dismiss="modal"
                    onClick={[Function]}
                    type="button"
                  >
                    Close
                  </button>
                </div>
              </div>
            </div>
          </div>
        </td>
        <td>
          <button
            className="btn btn-outline-danger"
            onClick={[Function]}
          >
            Remove
          </button>
        </td>
      </tr>
      <tr>
        <td>
          ASD
        </td>
        <td>
          ASDASD
        </td>
        <td>
          123
        </td>
        <td>
          <button
            className="btn btn-outline-dark"
            onClick={[Function]}
          >
            ⮝
          </button>
          <button
            className="btn btn-outline-dark"
            onClick={[Function]}
          >
            ⮟
          </button>
        </td>
        <td>
          <button
            className="btn btn-outline-warning"
            data-backdrop="static"
            data-target="#updateCurrentTaskModal-1"
            data-toggle="modal"
          >
            Update
          </button>
          <div
            className="modal fade"
            id="updateCurrentTaskModal-1"
            tabIndex={-1}
          >
            <div
              className="modal-dialog"
            >
              <div
                className="modal-content"
              >
                <div
                  className="modal-header"
                >
                  <h5
                    className="modal-title"
                  >
                    Update task
                  </h5>
                  <button
                    aria-label="Close"
                    className="close"
                    data-dismiss="modal"
                    onClick={[Function]}
                    type="button"
                  >
                    <span
                      aria-hidden="true"
                    >
                      ×
                    </span>
                  </button>
                </div>
                <div
                  className="modal-body"
                >
                  <div>
                    <label>
                      Id: 
                      1
                    </label>
                    <label
                      className="Param"
                    >
                      Tag
                      :
                      <input
                        className="form-control"
                        onChange={[Function]}
                        type="text"
                        value="ASD"
                      />
                    </label>
                    <label
                      className="Param"
                    >
                      Description
                      :
                      <input
                        className="form-control"
                        onChange={[Function]}
                        type="text"
                        value="ASDASD"
                      />
                    </label>
                    <label
                      className="Param"
                    >
                      Number of pomidors
                      :
                      <input
                        className="form-control"
                        onChange={[Function]}
                        type="number"
                        value={123}
                      />
                    </label>
                  </div>
                </div>
                <div
                  className="modal-footer"
                >
                  <button
                    className="btn btn-primary"
                    data-dismiss="modal"
                    onClick={[Function]}
                    type="button"
                  >
                    Save changes
                  </button>
                  <button
                    className="btn btn-secondary"
                    data-dismiss="modal"
                    onClick={[Function]}
                    type="button"
                  >
                    Close
                  </button>
                </div>
              </div>
            </div>
          </div>
        </td>
        <td>
          <button
            className="btn btn-outline-danger"
            onClick={[Function]}
          >
            Remove
          </button>
        </td>
      </tr>
      <tr>
        <td>
          ASDF
        </td>
        <td>
          ASDASDAS
        </td>
        <td>
          1233
        </td>
        <td>
          <button
            className="btn btn-outline-dark"
            onClick={[Function]}
          >
            ⮝
          </button>
          <button
            className="btn btn-outline-dark"
            onClick={[Function]}
          >
            ⮟
          </button>
        </td>
        <td>
          <button
            className="btn btn-outline-warning"
            data-backdrop="static"
            data-target="#updateCurrentTaskModal-2"
            data-toggle="modal"
          >
            Update
          </button>
          <div
            className="modal fade"
            id="updateCurrentTaskModal-2"
            tabIndex={-1}
          >
            <div
              className="modal-dialog"
            >
              <div
                className="modal-content"
              >
                <div
                  className="modal-header"
                >
                  <h5
                    className="modal-title"
                  >
                    Update task
                  </h5>
                  <button
                    aria-label="Close"
                    className="close"
                    data-dismiss="modal"
                    onClick={[Function]}
                    type="button"
                  >
                    <span
                      aria-hidden="true"
                    >
                      ×
                    </span>
                  </button>
                </div>
                <div
                  className="modal-body"
                >
                  <div>
                    <label>
                      Id: 
                      2
                    </label>
                    <label
                      className="Param"
                    >
                      Tag
                      :
                      <input
                        className="form-control"
                        onChange={[Function]}
                        type="text"
                        value="ASDF"
                      />
                    </label>
                    <label
                      className="Param"
                    >
                      Description
                      :
                      <input
                        className="form-control"
                        onChange={[Function]}
                        type="text"
                        value="ASDASDAS"
                      />
                    </label>
                    <label
                      className="Param"
                    >
                      Number of pomidors
                      :
                      <input
                        className="form-control"
                        onChange={[Function]}
                        type="number"
                        value={1233}
                      />
                    </label>
                  </div>
                </div>
                <div
                  className="modal-footer"
                >
                  <button
                    className="btn btn-primary"
                    data-dismiss="modal"
                    onClick={[Function]}
                    type="button"
                  >
                    Save changes
                  </button>
                  <button
                    className="btn btn-secondary"
                    data-dismiss="modal"
                    onClick={[Function]}
                    type="button"
                  >
                    Close
                  </button>
                </div>
              </div>
            </div>
          </div>
        </td>
        <td>
          <button
            className="btn btn-outline-danger"
            onClick={[Function]}
          >
            Remove
          </button>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Component snapshot test Header 1`] = `
<div
  className="Header"
>
  <div
    className="Page"
  >
    <button
      className="btn btn-success btn-lg"
      disabled={false}
      onClick={[Function]}
    >
      Main
    </button>
    <button
      className="btn btn-success btn-lg"
      disabled={false}
      onClick={[Function]}
    >
      Statistics
    </button>
  </div>
  <div
    className="Login"
  >
    <p>
      CustomUser
    </p>
    <button
      className="btn btn-success btn-lg"
      onClick={[Function]}
    >
      Log out
    </button>
  </div>
</div>
`;

exports[`Component snapshot test HistoryTask 1`] = `
<tr>
  <td>
    ASD
  </td>
  <td>
    AAA
  </td>
  <td>
    7:00:00 AM
  </td>
  <td>
    <button
      className="btn btn-outline-primary"
      onClick={[Function]}
    >
      Repeat
    </button>
  </td>
  <td>
    <button
      className="btn btn-outline-danger"
      onClick={[Function]}
    >
      Remove
    </button>
  </td>
</tr>
`;

exports[`Component snapshot test HistoryTasksTable 1`] = `
<div
  className="HistoryTasks"
>
  <h1>
    History Tasks
  </h1>
  <table
    className="table table-bordered table-responsive-md table-striped"
  >
    <tbody>
      <tr>
        <th>
          Tag
        </th>
        <th>
          Description
        </th>
        <th>
          Time Finished
        </th>
        <th>
          Repeat
        </th>
        <th>
          Remove
        </th>
      </tr>
      <tr>
        <td>
          ASDd
        </td>
        <td>
          ASDASDdd
        </td>
        <td>
          7:00:00 AM
        </td>
        <td>
          <button
            className="btn btn-outline-primary"
            onClick={[Function]}
          >
            Repeat
          </button>
        </td>
        <td>
          <button
            className="btn btn-outline-danger"
            onClick={[Function]}
          >
            Remove
          </button>
        </td>
      </tr>
      <tr>
        <td>
          ASDd
        </td>
        <td>
          ASDASDdd
        </td>
        <td>
          7:00:00 AM
        </td>
        <td>
          <button
            className="btn btn-outline-primary"
            onClick={[Function]}
          >
            Repeat
          </button>
        </td>
        <td>
          <button
            className="btn btn-outline-danger"
            onClick={[Function]}
          >
            Remove
          </button>
        </td>
      </tr>
      <tr>
        <td>
          ASDd
        </td>
        <td>
          ASDASDdd
        </td>
        <td>
          7:00:00 AM
        </td>
        <td>
          <button
            className="btn btn-outline-primary"
            onClick={[Function]}
          >
            Repeat
          </button>
        </td>
        <td>
          <button
            className="btn btn-outline-danger"
            onClick={[Function]}
          >
            Remove
          </button>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Component snapshot test SignIn 1`] = `
<div
  className="SignIn"
  onKeyDown={[Function]}
>
  <label>
    Name
    <input
      className="form-control"
      onChange={[Function]}
      value=""
    />
  </label>
  <label>
    Password
    <input
      className="form-control"
      onChange={[Function]}
      value=""
    />
  </label>
  <button
    className="btn btn-primary btn-lg"
    onClick={[Function]}
  >
    Sign in
  </button>
  <h5
    className="Error"
  >
    Error
  </h5>
</div>
`;

exports[`Component snapshot test SignUp 1`] = `
<div
  className="SignUp"
  onKeyDown={[Function]}
>
  <label>
    Name
    <input
      className="form-control"
      onChange={[Function]}
      value=""
    />
  </label>
  <label>
    Password
    <input
      className="form-control"
      onChange={[Function]}
      value=""
    />
  </label>
  <label>
    Password again
    <input
      className="form-control"
      onChange={[Function]}
      value=""
    />
  </label>
  <button
    className="btn btn-primary btn-lg"
    onClick={[Function]}
  >
    Sign up
  </button>
  <h5
    className="Error"
  >
    Err
  </h5>
</div>
`;

exports[`Component snapshot test Statistics 1`] = `
<div
  className="Statistics"
>
  Statistics
</div>
`;

exports[`Component snapshot test Timer 1`] = `
<div
  className="Timer"
>
  <div
    className="Options"
  >
    <button
      className="btn btn-outline-primary btn-lg"
      data-backdrop="static"
      data-target="#timerConfigModal"
      data-toggle="modal"
    >
      Config
    </button>
    <div
      className="modal fade"
      id="timerConfigModal"
      tabIndex={-1}
    >
      <div
        className="modal-dialog"
      >
        <div
          className="modal-content"
        >
          <div
            className="modal-header"
          >
            <h5
              className="modal-title"
            >
              Configuration properties
            </h5>
            <button
              aria-label="Close"
              className="close"
              data-dismiss="modal"
              onClick={[Function]}
              type="button"
            >
              <span
                aria-hidden="true"
              >
                ×
              </span>
            </button>
          </div>
          <div
            className="modal-body"
          >
            <div>
              <label>
                Pomidor duration
                :
                <input
                  className="form-control"
                  onChange={[Function]}
                  type="number"
                  value={2}
                />
              </label>
            </div>
            <div>
              <label>
                Short break duration
                :
                <input
                  className="form-control"
                  onChange={[Function]}
                  type="number"
                  value={1}
                />
              </label>
            </div>
            <div>
              <label>
                Long break duration
                :
                <input
                  className="form-control"
                  onChange={[Function]}
                  type="number"
                  value={3}
                />
              </label>
            </div>
            <div>
              <label>
                Number of pomidors before long break
                :
                <input
                  className="form-control"
                  onChange={[Function]}
                  type="number"
                  value={5}
                />
              </label>
            </div>
            <div>
              <label>
                Alarm when zero
                <select
                  className="form-control"
                  onChange={[Function]}
                  value="false"
                >
                  <option
                    value="true"
                  >
                    true
                  </option>
                  <option
                    value="false"
                  >
                    false
                  </option>
                </select>
              </label>
            </div>
          </div>
          <div
            className="modal-footer"
          >
            <button
              className="btn btn-primary"
              data-dismiss="modal"
              onClick={[Function]}
              type="button"
            >
              Save changes
            </button>
            <button
              className="btn btn-secondary"
              data-dismiss="modal"
              id="closeDialog"
              onClick={[Function]}
              type="button"
            >
              Close
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="Time Pause"
  >
    0
    :
    03
  </div>
  <h5>
    Pause
  </h5>
  <p>
    Pomidors: 
    2
    /
    5
  </p>
  <div>
    <button
      className="btn btn-outline-primary btn-lg"
      onClick={[Function]}
    >
      Start
    </button>
    <button
      className="btn btn-outline-primary btn-lg"
      onClick={[Function]}
    >
      Pause
    </button>
    <button
      className="btn btn-outline-primary btn-lg"
      onClick={[Function]}
    >
      Stop
    </button>
    <button
      className="btn btn-outline-primary btn-lg"
      onClick={[Function]}
    >
      Skip
    </button>
  </div>
</div>
`;

exports[`Component snapshot test TimerConfigDialog 1`] = `
<div
  className="modal fade"
  id="timerConfigModal"
  tabIndex={-1}
>
  <div
    className="modal-dialog"
  >
    <div
      className="modal-content"
    >
      <div
        className="modal-header"
      >
        <h5
          className="modal-title"
        >
          Configuration properties
        </h5>
        <button
          aria-label="Close"
          className="close"
          data-dismiss="modal"
          onClick={[Function]}
          type="button"
        >
          <span
            aria-hidden="true"
          >
            ×
          </span>
        </button>
      </div>
      <div
        className="modal-body"
      >
        <div>
          <label>
            Pomidor duration
            :
            <input
              className="form-control"
              onChange={[Function]}
              type="number"
              value={5}
            />
          </label>
        </div>
        <div>
          <label>
            Short break duration
            :
            <input
              className="form-control"
              onChange={[Function]}
              type="number"
              value={123}
            />
          </label>
        </div>
        <div>
          <label>
            Long break duration
            :
            <input
              className="form-control"
              onChange={[Function]}
              type="number"
              value={2}
            />
          </label>
        </div>
        <div>
          <label>
            Number of pomidors before long break
            :
            <input
              className="form-control"
              onChange={[Function]}
              type="number"
              value={3}
            />
          </label>
        </div>
        <div>
          <label>
            Alarm when zero
            <select
              className="form-control"
              onChange={[Function]}
              value="false"
            >
              <option
                value="true"
              >
                true
              </option>
              <option
                value="false"
              >
                false
              </option>
            </select>
          </label>
        </div>
      </div>
      <div
        className="modal-footer"
      >
        <button
          className="btn btn-primary"
          data-dismiss="modal"
          onClick={[Function]}
          type="button"
        >
          Save changes
        </button>
        <button
          className="btn btn-secondary"
          data-dismiss="modal"
          id="closeDialog"
          onClick={[Function]}
          type="button"
        >
          Close
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Component snapshot test UpdateCurrentTaskDialog 1`] = `
<div
  className="modal fade"
  id="updateCurrentTaskModal-1"
  tabIndex={-1}
>
  <div
    className="modal-dialog"
  >
    <div
      className="modal-content"
    >
      <div
        className="modal-header"
      >
        <h5
          className="modal-title"
        >
          Update task
        </h5>
        <button
          aria-label="Close"
          className="close"
          data-dismiss="modal"
          onClick={[Function]}
          type="button"
        >
          <span
            aria-hidden="true"
          >
            ×
          </span>
        </button>
      </div>
      <div
        className="modal-body"
      >
        <div>
          <label>
            Id: 
            1
          </label>
          <label
            className="Param"
          >
            Tag
            :
            <input
              className="form-control"
              onChange={[Function]}
              type="text"
              value="ADSD"
            />
          </label>
          <label
            className="Param"
          >
            Description
            :
            <input
              className="form-control"
              onChange={[Function]}
              type="text"
              value="ASD"
            />
          </label>
          <label
            className="Param"
          >
            Number of pomidors
            :
            <input
              className="form-control"
              onChange={[Function]}
              type="number"
              value={2}
            />
          </label>
        </div>
      </div>
      <div
        className="modal-footer"
      >
        <button
          className="btn btn-primary"
          data-dismiss="modal"
          onClick={[Function]}
          type="button"
        >
          Save changes
        </button>
        <button
          className="btn btn-secondary"
          data-dismiss="modal"
          onClick={[Function]}
          type="button"
        >
          Close
        </button>
      </div>
    </div>
  </div>
</div>
`;
